# pwr_so2_proj

./: CMakeLists.txt  build.sh  gowno  main.cpp
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json
.run/: so2_proj.run.xml
model/client/: Client.cpp  Client.h
model/cook/: Cook.cpp  Cook.h
model/kitchen/: Kitchen.cpp  Kitchen.h
model/kitchen_equipment/: EquipmentType.h  KitchenEquipment.cpp  KitchenEquipment.h
model/meal/: Meal.cpp  Meal.h
model/menu/: Menu.cpp  Menu.h
model/move/: MakeMove.cpp  MakeMove.h
model/order/: Order.cpp  Order.h  OrderStatus.h
model/setup_menu/: SetupMenu.cpp  SetupMenu.h
model/step/: Step.cpp  Step.h
model/waiter/: Waiter.cpp  Waiter.h
